# xmdx

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  eslint.config.ts  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json
.changeset/: bump-napi-dependency.md  fix-fence-indent-tracking.md  fix-href-xmdx-output.md  fix-mdx-heading-extraction.md  fix-vite-module-runner.md  heading-id-priority.md  next-1-release.md  pnpm-strict-resolve.md  pre.json  reduce-bundle-size.md  shiki-expressive-code-fixes.md
.github/workflows/: benchmark.yml  ci.yml  diff-dependencies.yml  e2e.yml  napi-build.yml  napi.yml  publish-manual.yml  publish-packages.yml  release-pr.yml  release.yml
benchmarks/: .gitignore
benchmarks/results/: results-local-quick-2way.json  results-local-quick-2way.md  results-local-quick.json  results-local-quick.md  results.json  results.md
benchmarks/scripts/: patch-astro-config.cjs  patch-content-config.cjs  patch-testing-mdx.cjs  run-benchmark.sh  setup.sh
crates/astro/: Cargo.toml
crates/astro/src/: codegen.rs  lib.rs
crates/astro/src/registry/: defaults.rs  mod.rs  types.rs
crates/astro/src/renderer/: mod.rs
crates/astro/src/renderer/mdast/: context.rs  directives.rs  mod.rs  render.rs  types.rs
crates/astro/src/transform/: code_fence.rs  components.rs  directives.rs  jsx_normalize.rs  mod.rs  smartypants.rs
crates/astro/tests/snapshots/: components_snapshot__aside_directive_disabled.snap  components_snapshot__aside_directive_enabled.snap  components_snapshot__aside_mdx_disabled.snap  components_snapshot__aside_mdx_enabled.snap  components_snapshot__filetree_disabled.snap  components_snapshot__filetree_enabled.snap  components_snapshot__steps_disabled.snap  components_snapshot__steps_enabled.snap  components_snapshot__tabs_disabled.snap  components_snapshot__tabs_enabled.snap  insta_tests__directive_html_attr.snap  insta_tests__directive_inline_code.snap  insta_tests__mdx_import_hoist.snap  insta_tests__mdx_struct_expr.snap  insta_tests__mdx_struct_nested.snap  insta_tests__mdx_struct_simple.snap  insta_tests__slug_duplicates.snap
crates/napi/: .npmignore  CHANGELOG.md  Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/napi/npm/darwin-arm64/: README.md  package.json
crates/napi/npm/darwin-x64/: README.md  package.json
crates/napi/npm/linux-arm64-gnu/: README.md  package.json
crates/napi/npm/linux-arm64-musl/: README.md  package.json
crates/napi/npm/linux-x64-gnu/: README.md  package.json
crates/napi/npm/linux-x64-musl/: README.md  package.json
crates/napi/npm/win32-x64-msvc/: README.md  package.json
crates/napi/src/: batch.rs  codegen.rs  compiler.rs  convert.rs  lib.rs  types.rs  utils.rs
crates/napi/tests/: auto_import.test.ts  fallback-compat.test.ts  fixtures-parity.test.ts  parse.test.ts  parseWithOptions.test.ts  parseWithStats.test.ts  snapshots.test.ts  task_list_mdx.test.ts  template_literal_bug.test.ts
crates/napi/tests/__snapshots__/: snapshots.test.ts.snap
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
crates/wasm/tests/: compile.rs
e2e/: .gitignore
(+55 files in other folders)
