[workspace]
members = [
    "crates/core",
    "crates/astro",
    "crates/napi",
    "crates/wasm",
]
resolver = "2"

[workspace.package]
authors = ["jp-knj"]
edition = "2024"
license = "MIT"
version = "0.0.1"

[workspace.metadata]
description = "Streaming Markdown/MDX experiments for Astro content plumbing"

[workspace.dependencies]
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0.17"
log = "0.4"
html-escape = "0.2"
lol_html = "2.0"
markdown = "1.0.0"
napi = { version = "3", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "3"
napi-build = "2"
wasm-bindgen = "=0.2.108"
wasm-bindgen-test = "0.3"
js-sys = "0.3"
insta = { version = "1.39.0", features = ["yaml"] }
once_cell = "1.19"
rayon = "1.10"
mdxjs = "1.0"
