[package]
name = "xmdx-napi"
description = "Node bindings for xmdx"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
xmdx-core = { path = "../core" }
xmdx-astro = { path = "../astro" }
napi = { workspace = true }
napi-derive = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
