[package]
name = "xmdx-napi"
description = "Node bindings for xmdx"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
xmdx-core = { path = "../core" }
xmdx-astro = { path = "../astro" }
napi = { workspace = true }
napi-derive = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }

[dev-dependencies]
napi = { version = "3", default-features = false, features = ["napi4", "serde-json", "noop"] }
