[package]
name = "xmdx-wasm"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
xmdx-core = { path = "../core" }
xmdx-astro = { path = "../astro" }
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
